--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-
+*{
+  font-family: 'Raleway', sans-serif;
+}
+/* 
 .studentItem{
   max-width: 50%;
-}
-
-
+} */
 
 .fullName{
   font-weight: bold;
@@ -23,5 +24,31 @@
   height: 0px;
   background-color: white;
   border:none;
+}
+
+.tags-input-container{
+  padding:.5em;
+  border-radius: 3px;
+  width: min(80vw,600px);
+  margin-top: 1em;
+}
+
+.tag-item{
+  background-color: aliceblue;
+  display: inline-block;
+  padding: 0.5em 0.75em;
+  border-radius: 20px;
+  
+}
+
+.tag-item .close{
+  display:inline;
+  border-radius: 50%;
+  color:white;
+  background-color: black;
+  height: 20px;
+  width: 20px;
+  margin-left:.5em ;
+  font-size:18px;
 }
 
